[gd_scene load_steps=15 format=3 uid="uid://ctdalmu83k538"]

[ext_resource type="Script" path="res://scenes/card_ui/card_ui.gd" id="1_0jjad"]
[ext_resource type="Theme" uid="uid://b3eypke120vg0" path="res://custom_resources/main_theme.tres" id="1_vsy22"]
[ext_resource type="StyleBox" uid="uid://c11i8rvjl6aff" path="res://scenes/card_ui/card_base_stylebox.tres" id="2_7uh4n"]
[ext_resource type="Resource" uid="uid://c2vsxi2soqj3n" path="res://custom_resources/player.tres" id="2_b007s"]
[ext_resource type="Script" path="res://scenes/card_ui/card_state_machine.gd" id="3_v4ohd"]
[ext_resource type="Texture2D" uid="uid://cpi065do4rjl8" path="res://assets/graphics/pirate_items.jpg" id="4_8np1q"]
[ext_resource type="Script" path="res://scenes/card_ui/card_states/card_base_state.gd" id="4_oe4sx"]
[ext_resource type="Script" path="res://scenes/card_ui/card_states/card_clicked_state.gd" id="5_ft602"]
[ext_resource type="Script" path="res://scenes/card_ui/card_states/card_dragging_state.gd" id="6_28b37"]
[ext_resource type="Texture2D" uid="uid://dfxkog0h2kxco" path="res://assets/graphics/coin 2.png" id="6_a5ric"]
[ext_resource type="Script" path="res://scenes/card_ui/card_states/card_released_state.gd" id="7_7ujtf"]
[ext_resource type="Script" path="res://scenes/card_ui/card_states/card_aiming_state.gd" id="8_idvko"]

[sub_resource type="AtlasTexture" id="AtlasTexture_lt4fe"]
atlas = ExtResource("4_8np1q")
region = Rect2(1311, 831, 161, 156)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cy21o"]
size = Vector2(50, 75)

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(100, 150)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -910.0
offset_bottom = -465.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0jjad")
player_stats = ExtResource("2_b007s")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("2_7uh4n")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -57.5
offset_right = 40.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = SubResource("AtlasTexture_lt4fe")
expand_mode = 1
stretch_mode = 5

[node name="Cost" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -15.0
offset_bottom = 21.0
grow_horizontal = 0
theme = ExtResource("1_vsy22")
theme_override_font_sizes/font_size = 16
text = "2	"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ValueContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(80, 40)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -43.0
offset_right = 40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 2

[node name="OneCoinValueContainer" type="VBoxContainer" parent="ValueContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="OneCoinIcon" type="TextureRect" parent="ValueContainer/OneCoinValueContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("6_a5ric")
expand_mode = 1
stretch_mode = 5

[node name="OneCoinValue" type="Label" parent="ValueContainer/OneCoinValueContainer"]
layout_mode = 2
theme = ExtResource("1_vsy22")
theme_override_font_sizes/font_size = 18
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TwoCoinValueContainer" type="VBoxContainer" parent="ValueContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TwoCoinIcon" type="TextureRect" parent="ValueContainer/TwoCoinValueContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("6_a5ric")
expand_mode = 1
stretch_mode = 5

[node name="TwoCoinValue" type="Label" parent="ValueContainer/TwoCoinValueContainer"]
layout_mode = 2
theme = ExtResource("1_vsy22")
theme_override_font_sizes/font_size = 18
text = "7"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ThreeCoinValueContainer" type="VBoxContainer" parent="ValueContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="ThreeCoinIcon" type="TextureRect" parent="ValueContainer/ThreeCoinValueContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
texture = ExtResource("6_a5ric")
expand_mode = 1
stretch_mode = 5

[node name="ThreeCoinValue" type="Label" parent="ValueContainer/ThreeCoinValueContainer"]
layout_mode = 2
theme = ExtResource("1_vsy22")
theme_override_font_sizes/font_size = 18
text = "10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DropPointDetector" type="Area2D" parent="."]
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DropPointDetector"]
position = Vector2(25, 37.5)
shape = SubResource("RectangleShape2D_cy21o")

[node name="CardStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_v4ohd")
initial_state = NodePath("CardBaseState")

[node name="CardBaseState" type="Node" parent="CardStateMachine"]
script = ExtResource("4_oe4sx")

[node name="CardClickedState" type="Node" parent="CardStateMachine"]
script = ExtResource("5_ft602")
state = 1

[node name="CardDraggingState" type="Node" parent="CardStateMachine"]
script = ExtResource("6_28b37")
state = 2

[node name="CardReleasedState" type="Node" parent="CardStateMachine"]
script = ExtResource("7_7ujtf")
state = 4

[node name="CardAimingState" type="Node" parent="CardStateMachine"]
script = ExtResource("8_idvko")
state = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="area_entered" from="DropPointDetector" to="." method="_on_drop_point_detector_area_entered"]
[connection signal="area_exited" from="DropPointDetector" to="." method="_on_drop_point_detector_area_exited"]
